ITKiddie/qn9/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-network-policy
  namespace: backend
spec:
  podSelector:
    matchLabels:
      app: Backend
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          namespace: frontend # Allow pods in frontend namespace
      podSelector:
        matchLabels:
          deployment: frontend # Allow pods in the deployment, frontend. pods are labelled
